--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "lint": "run-s lint:*",
     "lint:eslint": "eslint -c ./eslint.config.js .",
     "lint:tsc": "tsc --p ./tsconfig.json --noEmit true --emitDeclarationOnly false",
-    "fix": "npm run lint:eslint -- --fix && npm run lint:tsc"
+    "fix": "npm run lint:eslint -- --fix && npm run lint:tsc",
+    "pub:m": "npm run build && npm version minor && npm publish",
+    "pub:p": "npm run build && npm version patch && npm publish"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
-    "@form-crafter/core": "^0.1.7",
+    "@form-crafter/core": "^0.1.14",
     "@form-crafter/options-builder": "^0.0.10",
-    "@form-crafter/utils": "^0.0.12",
+    "@form-crafter/utils": "^0.0.13",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "imask": "^7.6.1",
@@ -41,7 +43,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "sass": "^1.77.8",
     "typescript": "~5.6.2",
-    "vite": "^5.3.1",
+    "vite": "^6.0.5",
     "vite-plugin-dts": "^4.5.0"
   },
   "peerDependencies": {
