--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "configs": "dev-configs-install",
@@ -29,7 +29,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@form-crafter/core": "^0.1.14",
     "@form-crafter/options-builder": "^0.0.10",
-    "@form-crafter/utils": "^0.0.13",
+    "@form-crafter/utils": "^0.0.14",
     "@mui/icons-material": "^5.16.1",
     "@mui/material": "^5.16.1",
     "imask": "^7.6.1",
