--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
-    "@form-crafter/core": "^0.1.29",
     "@form-crafter/options-builder": "^0.0.11",
     "@form-crafter/utils": "^0.0.21",
     "@maskito/kit": "^3.2.1",
@@ -45,6 +44,7 @@
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
     "vite-plugin-dts": "^4.5.0",
+    "@form-crafter/core": ">=0.1.29",
     "@form-crafter/generator": ">=0.0.5"
   },
   "peerDependencies": {
