--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "sass": "^1.77.8",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
-    "vite-plugin-dts": "^4.5.0",
-    "@form-crafter/core": ">=0.1.29",
-    "@form-crafter/generator": ">=0.0.5"
+    "vite-plugin-dts": "^4.5.0"
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@form-crafter/core": ">=0.1.29",
+    "@form-crafter/generator": ">=0.0.5"
   },
   "prettier": "@form-crafter/dev-configs/dist/prettier.json"
 }
