--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
-    "@form-crafter/options-builder": "^0.0.11",
-    "@form-crafter/utils": "^0.0.21",
     "@maskito/kit": "^3.2.1",
     "@maskito/react": "^3.2.1",
     "@mui/icons-material": "^5.16.1",
@@ -46,8 +44,10 @@
     "vite-plugin-dts": "^4.5.0"
   },
   "peerDependencies": {
-    "@form-crafter/core": ">=0.1.30",
-    "@form-crafter/generator": ">=0.0.8",
+    "@form-crafter/core": ">=0.1.31",
+    "@form-crafter/generator": ">=0.0.10",
+    "@form-crafter/utils": ">=0.0.21",
+    "@form-crafter/options-builder": ">=0.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
