--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "vite-plugin-dts": "^4.5.0"
   },
   "peerDependencies": {
-    "@form-crafter/core": ">=0.1.31",
+    "@form-crafter/core": "^0.1.33",
     "@form-crafter/generator": ">=0.0.10",
-    "@form-crafter/utils": ">=0.0.21",
     "@form-crafter/options-builder": ">=0.0.12",
+    "@form-crafter/utils": ">=0.0.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
